@@ -1,6 +1,9 @@
 Release 1.0.1 (in development)
 ==============================
 
+* #470: Fix generated target names for reST domain objects; they
+  are not in the same namespace.
+
 * #266: Add Bengali language.
 
 * #473: Fix a bug in parsing JavaScript object names.
